--- a/greenbag/index.html
+++ b/greenbag/index.html
@@ -3,12 +3,12 @@
   <title>Greenbag</title>
   <base href="https://inazumaboys.github.io/greenbagdemo/greenbag">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
+  <link rel="icon" type="image/x-icon" href="https://inazumaboys.github.io/greenbagdemo/greenbag/favicon.ico">
+<link rel="stylesheet" href="https://inazumaboys.github.io/greenbagdemo/greenbag/styles.ef46db3751d8e999.css"></head>
 <body>
   <app-root></app-root>
 <script src="https://inazumaboys.github.io/greenbagdemo/greenbag/runtime.c3166610016d758b.js" type="module"></script>
 <script src="https://inazumaboys.github.io/greenbagdemo/greenbag/polyfills.6c04b7731ad13968.js" type="module"></script>
-<script src="https://inazumaboys.github.io/greenbagdemo/greenbag/main.16e191f50e23c8cb.js" type="module"></script>
+<script src="https://inazumaboys.github.io/greenbagdemo/greenbag/main.0d5a9fc6771fe76e.js" type="module"></script>
 
 </body></html>
